@@ -1,3 +1,8 @@
+2004-02-17  Chris Garry  <cgarry@sweeneydesign.co.uk>
+    * src/vnc-server.c:
+    Remove prototypes for lwIP functions - now contained in lwIP
+    header files.
+
 2003-10-24  Gary Thomas  <gary@mlbassoc.com>
 
 	* tests/vnc-test.c: 
